objects/H2S__HarvestSyncOAuthSetting__mdt.object
<CustomObject>
    <description>Setting for HarvestSync OAuth</description>
    <fields>
        <fullName>H2S__BASE_URL__c</fullName>
        <label>BASE_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>H2S__OAUTH_ACCESS_TOKEN_URL__c</fullName>
        <label>OAUTH_ACCESS_TOKEN_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>H2S__REFRESH_TOKEN_PARAM__c</fullName>
        <label>REFRESH_TOKEN_PARAM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>H2S__SETTING__c</fullName>
        <label>SETTING</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>H2S__requestUrlToFormat__c</fullName>
        <label>requestUrlToFormat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HarvestSync OAuth Setting</label>
    <pluralLabel>HarvestSync OAuth Settings</pluralLabel>
</CustomObject>